[package]
name = "endless"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
wasm-bindgen-test = "0.3.34"
wgpu = "0.15.1"
winit = "0.28.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
